# URL_storage

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  testdata_for_db.json  top_links_users.sql
config/: settings.py  urls.py
docs_eng/: README.md
link_collections/: admin.py  apps.py  models.py  paginators.py  urls.py  validators.py
link_collections/api_views/: collection.py
link_collections/migrations/: 0001_initial.py
link_collections/serializers/: collection.py
links/: admin.py  models.py  paginators.py  permissions.py  services.py  urls.py  validators.py
links/api_views/: link.py
links/migrations/: 0001_initial.py
links/serializers/: link.py
templates/email/: password_reset_email.html
users/: models.py  paginators.py  permissions.py  signals.py  urls.py
users/api_views/: user.py
users/migrations/: 0001_initial.py
users/serializers/: user.py
